    linked with libm.
  * debian/patches/git-updates.diff: update from upstream stable branch:
    - Fix an infinite loop in the iconv program (CVE-2016-10228).  Closes:
      #856503.
    - debian/patches/any/submitted-selinux-deprecations.diff: upstreamed.
    - debian/patches/x32/submitted-fix-nptl-setgroups-x32.diff: upstreamed.

  [ Samuel Thibault ]
  * debian/libc0.3.symbols.hurd-i386: Fix dependency of __errno_location and
    __h_errno_location symbols in libpthread.
  * patches/hurd-i386/unsubmitted-sbrk-_end.diff: Fix _end symbol appearance
    by reworking sbrk.
  * patches/hurd-i386/unsubmitted-sched_sets.diff: Add sched_set/getscheduler.
  * patches/hurd-i386/git-pthread_atfork-hidden.diff: Hide pthread_atfork
    symbols imported to applications, to avoid leaking them.

 -- Aurelien Jarno <aurel32@debian.org>  Mon, 27 Jul 2020 00:13:49 +0200

glibc (2.31-2) unstable; urgency=medium

  [ Aurelien Jarno ]
  * debian/control.in/libc: add a Breaks: against macs (<< 2.2.7.1-3~) due to
    bug #965073.
  * debian/patches/git-updates.diff: update from upstream stable branch:
    - Fix a signed comparison vulnerability in the ARMv7 memcpy and memmove
      functions (CVE-2020-6096).  Closes: #961452.
  * debian/control.in/libc: do not limit the openssh-server breaks to 32-bit
    architectures, clock_nanosleep has to be allowed in addition to
    clock_gettime64.  Closes: #965932.
  * debian/patches/any/submitted-selinux-deprecations.diff: proposed patch to
    ignore the selinux deprecations introduced in libselinux (>= 3.1), fixing
    an FTBFS.  Closes: #965941.
  * debian/patches/x32/submitted-fix-nptl-setgroups-x32.patch: proposed patch
    to fix the setgroups functions in threaded applications on x32 (without
    the testsuite part).  Closes: #965091.

  [ Samuel Thibault ]
  * debian/patches/hurd-i386/local-tls-ie-align.diff: Fix TLS IE load with >=
    8 byte alignment.
  * debian/testsuite-xfail-debian.mk: Update backtrace result.