@@ -11,6 +11,8 @@ glibc (2.31-3) UNRELEASED; urgency=medium
       #856503.
     - debian/patches/any/submitted-selinux-deprecations.diff: upstreamed.
     - debian/patches/x32/submitted-fix-nptl-setgroups-x32.diff: upstreamed.
+  * debian/rules.d/build.mk: install <finclude/math-vector-fortran.h> in the
+    multiarch path.  Closes: #962457.
 
   [ Samuel Thibault ]
   * debian/libc0.3.symbols.hurd-i386: Fix dependency of __errno_location and
